--- a/package.xml
+++ b/package.xml
@@ -1,30 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ros_ws281x</name>
-  <version>0.0.0</version>
-  <description>The ros_ws281x package</description>
+  <version>0.0.1</version>
+  <description>ROS node for rpi_ws281x LED stSrip driver</description>
+  <maintainer email="sfalexrog@gmail.com">sfalexrog</maintainer>
+  <license>MIT</license>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="sf@todo.todo">sf</maintainer>
+  <!-- <url type="website">http://github.com/sfalexrog/ros_ws281x</url> -->
 
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
-
-
-  <!-- Url tags are optional, but multiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ros_ws281x</url> -->
-
-
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
 
@@ -54,10 +37,4 @@
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
 
-
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- Other tools can request additional information be placed here -->
-
-  </export>
 </package>
