--- a/ws281x/CMakeLists.txt
+++ b/ws281x/CMakeLists.txt
@@ -48,17 +48,14 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  LEDState.msg
-  LEDStateArray.msg
-)
+# add_message_files(
+#   FILES
+# )
 
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
   SetGamma.srv
-  SetLeds.srv
 )
 
 ## Generate actions in the 'action' folder
