Rename ros_ws281x package to ws281x

--- a/ws281x/CMakeLists.txt
+++ b/ws281x/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ros_ws281x)
+project(ws281x)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -133,7 +133,7 @@ add_subdirectory(vendor)
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/ros_ws281x_node.cpp)
+add_executable(${PROJECT_NAME}_node src/ws281x_node.cpp)
 target_link_libraries(${PROJECT_NAME}_node rpi_ws281x)
 target_compile_features(${PROJECT_NAME}_node PRIVATE
         cxx_nonstatic_member_init
