led_msgs, ws281x: Update dependencies

--- a/led_msgs/CMakeLists.txt
+++ b/led_msgs/CMakeLists.txt
@@ -103,7 +103,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES led_msgs
-#  CATKIN_DEPENDS other_catkin_pkg
+  CATKIN_DEPENDS message_runtime std_msgs
 #  DEPENDS system_lib
 )
 
