--- a/ws281x/package.xml
+++ b/ws281x/package.xml
@@ -33,10 +33,10 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <depend>led_msgs</depend>
+  <depend>message_generation</depend>
 
 </package>
