Use real ws281x library by default

--- a/ws281x/CMakeLists.txt
+++ b/ws281x/CMakeLists.txt
@@ -4,7 +4,7 @@ project(ws281x)
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
 
-option(ROS_WS2811_REAL_LIB "Use real ws281x library instead of the mock one" OFF)
+option(ROS_WS2811_MOCK_LIB "Use mock ws281x library instead of the real one" OFF)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
