gitignore: Ignore packaging artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,8 @@ fabric.properties
 .idea/sonarlint
 
 # End of https://www.gitignore.io/api/clion
+
+# Package build artifacts
+debian/
+obj-*/
+*.deb
