Enforce using RPATH on newer CMake versions To make the binary work with setuid bit

--- a/ws281x/CMakeLists.txt
+++ b/ws281x/CMakeLists.txt
@@ -160,6 +160,9 @@ target_link_libraries(${PROJECT_NAME}_node
 # Since we're using SUID bits, we need to leave rpath in for stripped binaries
 set_target_properties(${PROJECT_NAME}_node PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
+# Enforce using RPATH instead of RUNPATH
+target_link_options(${PROJECT_NAME}_node PRIVATE "-Wl,--disable-new-dtags")
+
 #############
 ## Install ##
 #############
